--- a/android/src/main/res/layout/statusbar_notification.xml
+++ b/android/src/main/res/layout/statusbar_notification.xml
@@ -4,12 +4,63 @@
     android:layout_gravity="center"
     android:gravity="center"
     android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="15sp"
-        style="@style/TextAppearance.Compat.Notification.Title"
-        android:text="Red Geofence Service" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:id="@+id/albumart"
+            android:background="@drawable/ic_nitification" />
+
+        <LinearLayout
+            android:layout_width="253dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                style="@style/TextAppearance.Compat.Notification.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginVertical="20dp"
+                android:gravity="center"
+                android:id="@+id/trackname_exp"
+                android:text="Track Name"
+                android:textSize="25sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_gravity="center_vertical">
+
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/backbutton_exp"
+                    android:text="bwd" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:id="@+id/mainbutton_exp"
+                    android:layout_height="wrap_content"
+                    android:text="play" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/forwardbutton_exp"
+                    android:text="fwd" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
 </LinearLayout>
